# void

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  go.mod  main.go  protocol_spec.md  rustfmt.toml
config/: config.go
docs/: PROTOCOL.md
protocol/: Cargo.toml
protocol/src/: lib.rs  primitive_value.rs  request.rs  response.rs  table.rs
server/: Cargo.toml
server/src/: actions.rs  config.rs  connection.rs  logger.rs  main.rs  server.rs  util.rs
server/src/compression/: mod.rs  read.rs  write.rs
server/src/connection/: error.rs  mod.rs  tcp.rs  websocket.rs
specs/: README.md
src/: actions.rs  arg_parser.rs  config.rs  conn_handler.rs  datetime.rs  logger.rs  main.rs  primitive_value.rs  request.rs  response.rs  server.rs
structs/: ds.go
utils/: common.go
