[package]
name = "void"
version = "0.1.0"
edition = "2021"

[dependencies]
may = "0.3.45"
num_cpus = "1.16.0"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0"
env_logger = "0.11.3"
log = { version = "0.4.21", features = ["serde"] }

[profile.release]
strip = "symbols"
