[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
http = { version = "1.1", optional = true }
scc = { version = "2.1", features = ["serde"], optional = true }

[features]
default = ["http"]
# optionally use concurrent/async scc::HashMap
# used in the server implementation
scc = ["dep:scc"]
# optionally support conversion to HTTP messages
# used in the server implementation
http = ["dep:http"]
