[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_variant = "0.1"
scc = { version = "2.1", features = ["serde"], optional = true }

[features]
default = []
# optionally use concurrent/async scc::HashMap
# used in the server implementation
scc = ["dep:scc"]
