[package]
name = "void"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
env_logger = "0.11"
log = { version = "0.4", features = ["serde"] }
# async
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "macros", "signal", "fs"] }
tokio-stream = "0.1"
tokio-native-tls = "0.3"
tokio-tungstenite = "0.22"
async-trait = "0.1"
futures-util = "0.3"
# internals
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.8" # config
rmp-serde = "1.3" # database & raw TCP protocol
simd-json = { version = "0.13", default-features = false, features = ["serde_impl", "swar-number-parsing"]} # WebSocket & HTTP protocol
gxhash = { version = "3", optional = true }
scc = { version = "2.1", features = ["serde"] }
bytes = "1.6"
# buffer compression
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
zstd = { version = "0.13", default-features = false }
snap = "1"
brotli = "6.0"
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng-compat"] }
weezl = { version = "0.1", features = ["async"] }
# stream compression (depends on above crates, minimal extra deps)
async-compression = { version = "0.4", features = ["tokio", "deflate", "zlib", "gzip", "brotli", "zstd"]}
tokio-snappy = "0.2"
tokio-util = { version = "0.7", features = ["compat", "io-util"] } # for LZW & LZ4
# command-line arguments
getargs = "0.5"
dirs = "5.0"

protocol = { path = "../protocol", features = ["scc"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[features]
default = ["gxhash"]
# use the extremely fast gxhash hashing algorithm internally
# requires some CPU features, only works on x86_64 and aarch64
gxhash = ["dep:gxhash"]
# force runtime feature detection for simd-json
runtime-detection = ["simd-json/runtime-detection"]
